--- a/android/build.gradle
+++ b/android/build.gradle
@@ -2,11 +2,17 @@
 
 buildscript {
     ext {
-        buildToolsVersion = "30.0.2"
+        //buildToolsVersion = "30.0.2"
         minSdkVersion = 21
-        compileSdkVersion = 30
-        targetSdkVersion = 30
+        //compileSdkVersion = 30
+        //targetSdkVersion = 30
         ndkVersion = "21.4.7075529"
+
+        compileSdkVersion   = 28
+        buildToolsVersion   = "28.0.3"
+        targetSdkVersion    = 28
+
+        googlePlayServicesVersion = "17.0.0"
     }
     repositories {
         google()
