--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-geolocation-service": "^5.3.0-beta.4",
-    "react-native-permissions": "^3.1.0"
-    "react-native": "0.66.3",
+    "react-native-permissions": "^3.1.0",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-indicator": "^1.2.2",
     "react-native-reanimated": "^2.3.0",
