--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "@reduxjs/toolkit": "^1.6.2",
     "axios": "^0.24.0",
     "react": "17.0.2",
+    "react-markdown": "^7.1.1",
     "react-native": "0.66.3",
     "react-native-datepicker": "^1.7.2",
     "react-native-geolocation-service": "^5.3.0-beta.4",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-indicator": "^1.2.2",
+    "react-native-markdown-display": "^7.0.0-alpha.2",
+    "react-native-markdown-text": "^1.0.1",
     "react-native-permissions": "^3.1.0",
     "react-native-reanimated": "^2.3.0",
     "react-native-safe-area-context": "^3.3.2",
